--- a/weframe-server/Cargo.toml
+++ b/weframe-server/Cargo.toml
@@ -9,3 +9,5 @@ warp = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 weframe-shared = { path = "../weframe-shared" }
+futures = "0.3"
+rand = "0.8"
