--- a/weframe-client/Cargo.toml
+++ b/weframe-client/Cargo.toml
@@ -8,5 +8,18 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
+web-sys = { version = "0.3", features = [
+    "console",
+    "Window",
+    "Document",
+    "WebSocket",
+    "MessageEvent",
+    "ErrorEvent",
+    "CloseEvent",
+] }
 weframe-shared = { path = "../weframe-shared" }
+serde = { version = "1.0", features = ["derive"] }
+serde-wasm-bindgen = "0.4"
+js-sys = "0.3"
+wasm-bindgen-futures = "0.4"
+serde_json = "1.0"
