--- a/weframe-client/Cargo.toml
+++ b/weframe-client/Cargo.toml
@@ -24,3 +24,5 @@ js-sys = "0.3"
 wasm-bindgen-futures = "0.4"
 serde_json = "1.0"
 parking_lot = "0.12"
+uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
+getrandom = { version = "0.2", features = ["js"] }
