--- a/weframe-client/Cargo.toml
+++ b/weframe-client/Cargo.toml
@@ -4,25 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
+js-sys = "0.3"
 web-sys = { version = "0.3", features = [
     "console",
-    "Window",
-    "Document",
     "WebSocket",
     "MessageEvent",
-    "ErrorEvent",
-    "CloseEvent",
 ] }
-weframe-shared = { path = "../weframe-shared" }
 serde = { version = "1.0", features = ["derive"] }
-serde-wasm-bindgen = "0.4"
-js-sys = "0.3"
-wasm-bindgen-futures = "0.4"
 serde_json = "1.0"
-parking_lot = "0.12"
-uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
-getrandom = { version = "0.2", features = ["js"] }
+serde-wasm-bindgen = "0.4"
+uuid = { version = "1.0", features = ["v4", "js"] }
+weframe-shared = { path = "../weframe-shared" }
