--- a/weframe-server/Cargo.toml
+++ b/weframe-server/Cargo.toml
@@ -11,3 +11,4 @@ serde_json = "1.0"
 weframe-shared = { path = "../weframe-shared" }
 futures = "0.3"
 rand = "0.8"
+uuid = { version = "1.0", features = ["v4", "js"] }
